--- a/gui/src/benchmark/index.html
+++ b/gui/src/benchmark/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="minimum-scale=1, initial-scale=1, width=device-width"
     />
-    <title>MCS Portal</title>
+    <title>Machine Common Sense Benchmarks</title>
 
     <base href="/" />
 
