--- a/gui/src/kg/index.html
+++ b/gui/src/kg/index.html
@@ -8,6 +8,8 @@
     />
     <title>Common Sense Knowledge Graph</title>
 
+    <base href="<%= htmlWebpackPlugin.options.kgBaseHref %>">
+
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
