KG_BASE_HREF -> BASE_HREF

--- a/gui/src/kg/index.html
+++ b/gui/src/kg/index.html
@@ -8,7 +8,7 @@
     />
     <title>Common Sense Knowledge Graph</title>
 
-    <base href="<%= htmlWebpackPlugin.options.kgBaseHref %>">
+    <base href="<%= htmlWebpackPlugin.options.baseHref %>">
 
     <link
       rel="stylesheet"
